Update to latest XCSoar 6.8 dev branch HEAD
This adds some bugfixes in the replay code and QNH processing.

The travis before_install is needed to initialize the boost submodules
inside xcsoar's repository (see http://docs.travis-ci.com/user/build-configuration/#Git-Submodules)

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -27,4 +27,5 @@ prune xcsoar.submodule/src/UIUtil
 prune xcsoar.submodule/src/Widget
 graft xcsoar.submodule/python
 graft xcsoar.submodule/test/src
+graft xcsoar.submodule/lib/boost
 include xcsoar.submodule/tools/GenerateSineTables.cpp
