--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ language: python
 python:
   - 2.7
 
+before_install:
+  - git submodule update --init --recursive
+
 install:
   # Install build dependencies
   - sudo apt-get update
