--- a/.travis.yml
+++ b/.travis.yml
@@ -21,3 +21,12 @@ script:
 notifications:
   email:
     on_failure: change
+
+deploy:
+  provider: pypi
+  user: Tobias.Bieniek
+  password:
+    secure: a7VeLjfa5BqojsRNa+RLu8YaagM1FFEzfuovLYnUxd0EC+6060VZyXBp06wINpqntDYPl4qfdNjZcAWsoSh02apjWYCw9LiRkRB5FlygulTFyUbc/qW5Ol/NzkQP2jpMW82eehE7wroj9Dfwp0zU4WDgUugPmDQxtpHRSR+34mA=
+  on:
+    tags: true
+    repo: Turbo87/py-xcsoar
