--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,15 @@ language: python
 python:
   - 2.7
 
-before_install:
-  - git submodule update --init --recursive
+sudo: false
 
-install:
-  # Install build dependencies
-  - sudo apt-get update
-  - sudo apt-get install libcurl4-openssl-dev
+addons:
+  apt:
+    packages:
+      - libcurl4-openssl-dev
+
+before_script:
+  - git submodule update --init --recursive
 
 script:
   # Try to install the package
