--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "xcsoar"]
 	path = xcsoar.submodule
-	url = git://git.xcsoar.org/xcsoar/master/xcsoar.git
+	url = git://github.com/skylines-project/XCSoar.git
