--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ jobs:
 
       language: python
       python: 2.7
+      env: PYTHON_TAG=py27
 
       addons:
         apt:
@@ -33,6 +34,7 @@ jobs:
 
     - <<: *test
       python: 3.4
+      env: PYTHON_TAG=py34
 
     - stage: test
       env: NAME=black         # used only to make Travis UI show description
@@ -52,7 +54,7 @@ notifications:
 
 deploy:
   provider: pypi
-  distributions: "sdist bdist_wheel"
+  distributions: "sdist bdist_wheel --python-tag=${PYTHON_TAG}"
   skip_cleanup: true
   user: Tobias.Bieniek
   password:
