--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ jobs:
         apt:
           packages:
             - libcurl4-openssl-dev
-            - python3.5-dev
+            - python-dev
 
       install:
         - pip install -r requirements.txt
